<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/rounded_corners_bg"
    android:layout_height="match_parent">

    <TextView
        android:padding="10dp"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="#000000"
        android:textSize="25sp"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stable_id" />

        <EditText
            android:id="@+id/edittextext_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="5"
            android:hint="@string/stable_id_Prompt" />
    </LinearLayout>

    <LinearLayout
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/stable_village" />

        <EditText
            android:id="@+id/edittextext_village"
            android:layout_weight="5"
            android:layout_marginLeft="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:hint="@string/villagedefault" />
    </LinearLayout>
    <LinearLayout
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/stable_unitnumber" />

        <EditText
            android:id="@+id/edittextext_sunit"
            android:layout_weight="5"
            android:layout_marginLeft="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/sunitdefault" />
    </LinearLayout>
    <LinearLayout
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/stable_floor" />

        <EditText
            android:id="@+id/edittextext_floor"
            android:layout_weight="5"
            android:layout_marginLeft="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/floordefault" />
    </LinearLayout>
    <LinearLayout
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/stable_housenumber" />

        <EditText
            android:id="@+id/edittextext_house"
            android:layout_weight="5"
            android:layout_marginLeft="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/housefloordefault" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal"
        >


         <TextView
             android:layout_width="0dp"
             android:layout_weight="2"
             android:layout_height="wrap_content" />


        <Button
            android:id="@+id/btn_pressrvation"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/small_title_bar"
            android:textColor="#fff"
            android:text="@string/preservation" />
        <TextView

            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
         />
        <Button
            android:id="@+id/btn_clers"
            android:layout_width="0dp"
            android:textColor="#fff"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/small_title_bar"
            android:text="@string/cancel" />
        <TextView

            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
         />
    </LinearLayout>


</LinearLayout>
